# homework

./: functions.c  functions.h  main.c
01_11_task2/: bogoSort.c  bogoSort.h  main.c
AVL_Tree/: CMakeLists.txt  main.c  tests.c  tests.h  tree.c  tree.h
advancedParenthesesBalance/: CMakeLists.txt  main.c  parenthesesBalance.c  parenthesesBalance.h  stack.c  stack.h  tests.c  tests.h
binaryRepresentation/: functions.c  functions.h  main.c
bubbleAndCounting/: CMakeLists.txt  main.c  sorting.c  sorting.h  tests.c  tests.h
commonestElement/: CMakeLists.txt  commonestElement.c  commonestElement.h  main.c  test.c  test.h
consoleBuild/: consoleBuildScript.sh
exponentation/: CMakeLists.txt  main.c  power.c  power.h  test.c  test.h
fibonacci/: CMakeLists.txt  fibonacci.c  fibonacci.h  main.c
hashTable/: CMakeLists.txt  hashTable.c  hashTable.h  list.c  list.h  main.c  tests.c  tests.h
mergeSort/: CMakeLists.txt  contact.h  contacts.txt  list.c  list.h  main.c  mergeSort.c  mergeSort.h  tests.c  tests.h
modulesAndFiles/: CMakeLists.txt  hashTable.c  hashTable.h  list.h  main.c  tests.c  tests.h  text.txt
nurseryRhyme/: CMakeLists.txt  list.c  list.h  main.c  tests.c  tests.h  theRevenant.c  theRevenant.h
parenthesesBalance/: CMakeLists.txt  main.c
parseTree/: CMakeLists.txt  main.c  parse.c  parse.h  stack.c  stack.h  tests.c  tests.h  text.txt  tree.c  tree.h
phoneDirectory/: CMakeLists.txt  main.c  phoneDirectory.c  phoneDirectory.h  tests.c  tests.h  text.txt
postfixCalculator/: CMakeLists.txt  calculator.c  calculator.h  main.c  stack.c  stack.h  (+2 more)
(+123 files in other folders)
